--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /resource/**
 /ignore/**
 *.code-workplace
-/Poof-O-Floof/src/main/resources/application.properties
+Poof-O-Floof/src/main/resources/application.properties
+Poof-O-Floof-ui\node_modules
