Simple Push and Pull Test

--- a/Poof-O-Floof/src/main/resources/application1.properties
+++ b/Poof-O-Floof/src/main/resources/application1.properties
@@ -1,4 +1,4 @@
-//remove this line and remove the 1 in the file name
+//removeThisLineAndRemoveThe1InTheFileName
 jdbc.url:jdbc:oracle:thin:@<(YOUR URL HERE)>:1521/ORCL
 jdbc.username:
 jdbc.password:
