added proper photo url to social media sharing, using Hao's photo service

--- a/Poof-O-Floof/src/main/resources/application.properties
+++ b/Poof-O-Floof/src/main/resources/application.properties
@@ -2,5 +2,5 @@
 jdbc.url:jdbc:oracle:thin:@<(YOUR URL HERE)>:1521/ORCL
 jdbc.username:
 jdbc.password:
-petfinder.key:
-petfinder.secret:
+petfinder.key: zG31fUd1IGeloXoN9HaJ6Sw3OyM2hV9vxEX0yLnMACnsrYtSRg
+petfinder.secret: g6fMEWarfBe9q4uR9WbY9VtRGyP4nDRFTEvERFnV
