--- a/Poof-O-Floof/src/main/resources/application1.properties
+++ b/Poof-O-Floof/src/main/resources/application1.properties
@@ -1,4 +1,4 @@
-//COPY FILE DO-NOT-REMOVE, DO-NOT-RENAME
+//COPY-FILE_DO-NOT-REMOVE,_DO-NOT-RENAME
 //removeThisLineAndRemoveThe1InTheFileName
 jdbc.url:jdbc:oracle:thin:@<(YOUR URL HERE)>:1521/ORCL
 jdbc.username:
