back end favorite functionality added, need to add formatting

--- a/Poof-O-Floof/src/main/resources/application1.properties
+++ b/Poof-O-Floof/src/main/resources/application1.properties
@@ -1,5 +1,5 @@
 //removeThisLineAndRemoveThe1InTheFileName
-jdbc.url:jdbc:oracle:thin:@<(YOUR URL HERE)>:1521/ORCL
+jdbc.url:jdbc:oracle:thin:@demos-1909.ckgbgyuehmou.us-east-2.rds.amazonaws.com:1521/ORCL
 jdbc.username:
 jdbc.password:
 petfinder.key:
